pyem (0.1) Tue, 28 Nov 2006 16:56:35 +0900

	* first release

-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 