@@ -1,6 +1,9 @@
-# Last Change: Tue Nov 28 05:00 PM 2006 J
-
+# Last Change: Tue Dec 12 05:00 PM 2006 J
+Various things to do before submitting outside sandbox
     - there is no doc.
     - the handling of non contiguous arrays is not really 
     elegant, and the code is difficult to maintain
     - rank > 2: must code in C ? (yuk)
+    - for correlation: no reason to support only autocorrelation. Also, it is
+stupid to offer difference function for different implementation: should be an
+argument (fft vs no fft). Basically, the current API is not good.
