@@ -1,4 +1,13 @@
-pyem (0.1) Tue, 28 Nov 2006 16:56:35 +0900
+cdavid (0.2) Tue, 12 Dec 2006 17:14:18 +0900
+
+	* second release
+	* add autocorrelation based on fft (should check def for
+	complex arrays, eg use conjugate or not ?)
+	* add code segment_axis from A.M Archibald
+
+-- David Cournapeau <david@ar.media.kyoto-u.ac.jp> 
+
+cdavid (0.1) Tue, 28 Nov 2006 16:56:35 +0900
 
 	* first release
 
